# DRISHTI

./: .gitignore  App.tsx  LICENSE  README.md  device_log.txt  index.js  latest_logs.txt  logcat_output.txt  maven.xml  maven2.xml  metro.config.js  package-lock.json  package.json  test.js
.github/workflows/: android-build.yml  js-check.yml
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt  face_auth_plugin.cpp
android/app/src/main/cpp/engine/: FaceAuthHostObject.cpp  FaceAuthHostObject.h  FrameMailbox.h  InferencePipeline.cpp  InferencePipeline.h
android/app/src/main/cpp/liveness/: LivenessFSM.cpp  LivenessFSM.h  TemporalVariance.h
android/app/src/main/cpp/matching/: CosineSIMD.h  CosineSimilarity.h  LSHIndex.cpp  LSHIndex.h
android/app/src/main/cpp/preprocessing/: AdaptiveClahe.h  CLAHE.h  FrameMailbox.h
android/app/src/main/cpp/shared/: FaceAuthResult.h
android/app/src/main/cpp/testing/: test_harness.cpp
android/app/src/main/cpp/tflite/: TFLiteEngine.cpp  TFLiteEngine.h
android/app/src/main/java/com/drishti/: FaceAuthFrameProcessorPlugin.kt  FaceAuthModule.kt  FaceAuthPackage.kt  KeystoreModule.kt  MainActivity.kt  MainApplication.kt  UptimeModule.kt
ios/: FaceAuthPlugin.podspec  UptimeModule.swift
patches/: react-native-vision-camera+3.9.2.patch
shared/: FaceAuthResult.h  FaceAuthResult.ts  contracts.md
src/: CheckWorklets.ts
src/components/: AppNavigator.tsx
src/crypto/: ErasureVerification.ts
src/database/: DatabaseService.ts
src/hooks/: useCameraStream.ts  useFaceAuth.ts  useFaceAuthPlugin.ts
src/native/: FaceAuthEngine.ts  FrameProcessorPlugin.ts  MyFrameProcessor.js
src/networking/: SyncService.ts
src/screens/: EnrollmentScreen.tsx  FaceAuthScreen.tsx  HomeScreen.tsx  LedgerScreen.tsx  VerifyScreen.tsx
src/storage/: ledger.ts
src/ui/: LedgerHUD.tsx
